fix margins and text alignment

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -92,6 +92,10 @@ textarea.materialize-textarea:focus:not([readonly])+label {
 	margin-left: 7px;
 }
 
+.actions {
+	text-align: left; 
+}
+
 .checkbox {
 	background: red;
 	position: static !important; 
